<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/movie_poster"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp"
        tools:srcCompat="@tools:sample/backgrounds/scenic"
        android:contentDescription="@string/movie_poster" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:flow_verticalGap="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_poster">

        <TextView
            android:id="@+id/movie_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/movie_id"
            android:textFontWeight="700"
            android:textSize="10sp" />
        <TextView
            android:id="@+id/movie_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/genre"
            android:textFontWeight="700"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/movie_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/movie_release_year"
            android:textFontWeight="700"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/movie_title"
            android:textFontWeight="700"
            android:textSize="18sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:flow_verticalGap="4dp"
        app:layout_constraintTop_toBottomOf="@+id/movie_poster">
        <TextView
            android:id="@+id/movie_runtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/runtime"
            android:textFontWeight="700"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/movie_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/movie_language"
            android:textFontWeight="700"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/movie_director"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/director"
            android:textFontWeight="700"
            android:textSize="18sp"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/movie_actors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:fontFamily="sans-serif"
        android:text="@string/movie_actors"
        android:textFontWeight="500"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/movie_plot" />

    <TextView
        android:id="@+id/movie_plot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:fontFamily="sans-serif"
        android:text="@string/movie_plot"
        android:textFontWeight="500"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/movie_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:layout_margin="24dp"
        android:text="@string/movie_country"
        android:textFontWeight="700"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/movie_actors" />

</androidx.constraintlayout.widget.ConstraintLayout>